--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/number_3"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -34,7 +33,7 @@
                     android:id="@+id/phoneNumberText"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="3"></TextView>
+                    android:layout_weight="3"/>
 
                 <ImageButton
                     android:id="@+id/deleteButton"
@@ -99,9 +98,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:text="3"
-                            android:textSize="45dp"
-                            tools:ignore="DuplicateIds">
-                        </Button>
+                            android:textSize="45dp"/>
 
                     </LinearLayout>
 
