--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,17 +29,26 @@
                 android:layout_height="match_parent"
                 android:weightSum="4">
 
-                <TextView
+                <EditText
                     android:id="@+id/phoneNumberText"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="3"/>
+                    android:layout_weight="3.3"
+                    android:maxLength="15"
+                    android:textSize="55dp"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:cursorVisible="false"
+                    android:inputType="phone"
+                    />
 
                 <ImageButton
                     android:id="@+id/deleteButton"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_weight="0.7"
                     app:srcCompat="@android:drawable/ic_input_delete">
 
                 </ImageButton>
@@ -257,28 +266,24 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
+                android:layout_gravity="center"
+                android:gravity="center"
                 android:weightSum="3">
 
                 <Button
                     android:id="@+id/callButton"
                     android:layout_width="205dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="音声通話">
 
                 </Button>
 
-                <Button
-                    android:id="@+id/button"
-                    android:layout_width="205dp"
-                    android:layout_height="wrap_content"
-                    android:text="Button">
-
-                </Button>
             </LinearLayout>
 
 
         </LinearLayout>
 
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
